# ApplyCrypto

./: .gitignore  AGENTS.md  ATT61070.env  CLAUDE.md  README.md  config.example.json  config.sliex.json  get_class_inherit_graph.py  initialize_template.py  main.py  migration_log.txt  prompt_temp  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt  run_ui.py  test_call_graph_builder_inherit.py
.cursor/: mcp.json
.taskmaster/: state.json
docs/: analysis_report_instruction.md  analyzer_component_diagram.puml  architecture.md  artifact_generator_instruction.md  class_diagram.puml  component_diagram.puml  config_guide.md  diff_generation.md  endpoint_report_instruction.md  ksign_call_estimation_report.md  modifier_component_diagram.puml  refactoring.md  render_diagrams.py  render_modifier_diagram.py  spec_generator_instruction.md  tips.md
examples/: .gitignore  DigitalChannelSampleDao.java  EmployeeService.java  call_graph_builder_example.py  call_tree_example.py  cli_example.py  code_modifier_example.py  collector_example.py  db_access_analyzer_example.py  digital_channel_get_namespace_map.py  java_parser_example.py  run_anyframe_banka_context_generator.py  run_anyframe_context_generator.py  run_code_generator.py  run_context_generator.py  run_diff_code_patcher.py  run_diff_generator.py  run_jdbc_context_generator.py  run_modification_context_generator.py  run_modification_steps.py  run_mybatis_ccs_context_generator.py  run_mybatis_context_generator.py  xml_mapper_parser_example.py
scripts/: download_wheels.ps1  extract_modified.py  lint.ps1  (+1 more)
(+226 files in other folders)
