# [build-system]
# requires = ["setuptools>=68.0", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "applycrypto"
version = "0.1.0"
description = "Java Spring Boot 프로젝트 암호화 자동 적용 도구"
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
applycrypto = "cli.run:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

